# UltraWin-MCP

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EVOLUTION_PLAN.md  PRIVACY.md  README.md  SECURITY.md  package.json  test.txt
.github/workflows/: lint_filenames.yml  rust_ci.yml
docs/: API_KEY_MANAGEMENT.md  API_VERSIONING.md  ARCHITECTURE.md  HEADLESS_AUTH.md
scripts/: client_sim.py
src/: capture.rs  input.rs  lib.rs  main.rs  server.rs  traits.rs  uia.rs  vision.rs
src/server/: lsp_transport.rs
src/vision/: browser.rs  cdp.rs  engine.rs  mod.rs
tests/: mcp_protocol.rs  vision_test.rs
