[package]
name = "ultrawin-mcp"
version = "0.1.0"
edition = "2024"
authors = ["jxoesneon"]
description = "State-of-the-art Unified Rust MCP server for Windows 10+ automation and vision."

[dependencies]
# Core Runtime & Protocol
tokio = { version = "1.43", features = ["full"] }
mcp-sdk-rs = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows Native APIs (Cutting Edge)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation_Collections"
] }

# Visual Intelligence (ONNX + DirectML)
ort = { version = "2.0.0-rc.9", features = ["directml"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
image = "0.25"
base64 = "0.22"
async-trait = "0.1.89"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
